add very basic header, content, footer

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,14 @@
-{{outlet}}
+<header>
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+      <p>ETLive</p>
+    </div>
+  </nav>
+</header>
+<div class="container content">
+  <p>Content</p>
+  {{outlet}}
+</div>
+<footer>
+  <p> some footer</p>
+</footer>
