--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,15 @@
-<header>
-  <nav class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container">
-      <p>ETLive</p>
-    </div>
-  </nav>
+<header class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class="container-fluid">
+    <nav class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a>ETLive</a></li>
+        {{#link-to 'application' tagName='li'}}<a href="#">Home</a>{{/link-to}}
+        {{#link-to '' tagName='li'}}<a href="#">Servers</a>{{/link-to}}
+        {{#link-to '' tagName='li'}}<a href="#">Friends</a>{{/link-to}}
+        {{#link-to '' tagName='li'}}<a href="#">Settings</a>{{/link-to}}
+      </ul>
+    </nav>
+  </div>
 </header>
 <div class="container content">
   <p>Content</p>
