--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -1,12 +1,4 @@
-html, body {
-  height: 100%;
-}
-
-body > div {
-  height: 100%;
-}
-
-.content {
-  min-height: 100%;
+body {
+  padding-bottom: 70px;
 }
 
