fix navbar hover state

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,6 +1,8 @@
 //= Navbar
 $navbar-default-bg: #333;
 $navbar-default-link-active-bg: #008CBA;
+$navbar-default-link-hover-bg: #272727;
 $navbar-default-link-color: #fff;
 $navbar-default-link-active-color: #fff;
+$navbar-default-link-hover-color: #fff;
 
