--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -4,5 +4,5 @@ $navbar-default-link-active-bg: #008CBA;
 $navbar-default-link-hover-bg: #272727;
 $navbar-default-link-color: #fff;
 $navbar-default-link-active-color: #fff;
-$navbar-default-link-hover-color: #fff;
+$navbar-default-link-hover-color: #e6e6e6;
 
