--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -19,6 +19,7 @@
 </header>
 <div class="content">
   {{outlet}}
+  <h1>TEST SOMETHING</h1>
 </div>
 <footer class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
